--- a/main-styles.css
+++ b/main-styles.css
@@ -79,7 +79,7 @@ nav ul li{
 #slideshow{
   width: 100%;
   height: 100vh;
-  background-image: url(assets/slideshow_background.png);
+  background-image: url(assets/carousel/slideshow_background.png);
   background-size: cover;
   background-position: center;
 }
@@ -89,7 +89,7 @@ nav ul li{
 }
 
 .slide1-col-1 {
-  flex-basis: 40%;
+  flex-basis: 40% !important;
 }
 
 .slide1-col-1 img {
@@ -99,7 +99,7 @@ nav ul li{
 
 .slide1-col-2 {
   height: 100vh;
-  flex-basis: 60%;
+  flex-basis: 60% !important;
   align-items: center;
   justify-content: center;
   display: flex;
@@ -129,7 +129,7 @@ nav ul li{
 /* vip exclusive  */
 #vip-exclusive {
   width: 100%;
-  background-image: url(assets/vip_background.png);
+  background-image: url(assets/vip/vip_background.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -174,3 +174,151 @@ nav ul li{
 
 
 /* now trending  */
+.now-trending {
+  background: #FFF;
+}
+
+.trending-image-col {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  margin-top: 40px
+}
+
+.trending-image {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 12px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.trending-image p {
+  font-weight: 600;
+  font-size: 24px !important;
+  margin-top: 20px
+
+}
+
+.now-trending {
+  text-align: center;
+  padding: 20px;
+}
+
+.now-trending  h1{
+  font-weight: 700;
+  font-size: 36px;
+}
+
+.now-trending p {
+  font-size: 14px
+}
+
+.hastag-container {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.hastag {
+  border: 1px solid #000;
+  border-radius: 50px;
+  width: fit-content ;
+  padding: 10px;
+  font-weight: 700;
+}
+
+/* new arrivals  */
+#new-arrivals {
+  width: 100%;
+  height: 500px;
+  background-image: url(assets/new-arrival/new_arrivals_bg.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.new-arrival-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.new-arrivals-col-1 {
+  flex-basis: 40% !important;
+}
+
+.new-arrivals-col-2 {
+  flex-basis: 60% !important;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.new-arrivals-col-2 h2 {
+  color: white;
+  font-size: 86px;
+  font-weight: 800;
+}
+
+.new-arrivals-col-2 p {
+  color: white;
+  font-size: 28px;
+  font-weight: 600;
+}
+
+.new-arrivals-col-2 button {
+
+}
+
+/* recent bought  */
+.recent_bought {
+  background-color: #FFF;
+  text-align: center;
+  padding: 20px;
+}
+
+
+.column {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  margin-top: 40px
+}
+
+.items {
+  width: 225px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between
+}
+
+.items .description {
+  margin-top: 20px;
+}
+
+.buy-container .price  {
+  font-size: 14px;
+  font-weight: 700;
+  padding: 12px 0px;
+  text-align: start;
+  display: flex;
+  gap: 20px;
+}
+
+.buy-container .price span {
+  color: red;
+  text-decoration: line-through;
+}
+
+.buy-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.buy-container button {
+  background-color: green;
+  margin: 0px;
+}
