--- a/main-styles.css
+++ b/main-styles.css
@@ -15,7 +15,7 @@ body {
 
 /* navigation bar  */
 
-#nav-bar {
+.nav-bar {
   width: 100%;
   height: 70px;
   background: white;
@@ -57,7 +57,7 @@ nav ul li{
 
 /* benefits bar  */
 
-#benefits {
+.benefits {
   width: 100%;
   height: 50px;
   background: #F2F2F2;
@@ -76,7 +76,7 @@ nav ul li{
 }
 
 /* slideshow  */
-#slideshow{
+.slideshow{
   width: 100%;
   height: 100vh;
   background-image: url(assets/carousel/slideshow_background.png);
@@ -116,7 +116,7 @@ nav ul li{
   margin: 0px 150px;
   padding: 15px 30px;
   font-size: 36px;
-  font-weight: 600px;
+  font-weight: 800px;
   transition: background 0.5s, transform 0.5s;
 }
 
@@ -230,9 +230,9 @@ nav ul li{
 }
 
 /* new arrivals  */
-#new-arrivals {
+.new-arrivals {
   width: 100%;
-  height: 500px;
+  height: 600px;
   background-image: url(assets/new-arrival/new_arrivals_bg.png);
   background-size: cover;
   background-position: center;
@@ -245,35 +245,46 @@ nav ul li{
 }
 
 .new-arrivals-col-1 {
-  flex-basis: 40% !important;
+  flex-basis: 55% !important;
 }
 
 .new-arrivals-col-2 {
-  flex-basis: 60% !important;
-  align-items: center;
-  justify-content: center;
+  flex-basis: 45% !important;
+  height: 600px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+
 }
 
 .new-arrivals-col-2 h2 {
   color: white;
   font-size: 86px;
   font-weight: 800;
+  line-height: 90px;
+  text-transform: uppercase;
 }
 
 .new-arrivals-col-2 p {
   color: white;
   font-size: 28px;
   font-weight: 600;
+  margin-top: 30px;
 }
 
 .new-arrivals-col-2 button {
-
+  border-width: 0;
+  margin: 0px 150px;
+  padding: 10px 20px;
+  font-size: 18px;
+  font-weight: 800;
+  margin: 0px;
+  width: fit-content;
+  margin-top: 40px;
 }
 
 /* recent bought  */
-.recent_bought {
+.recent-bought {
   background-color: #FFF;
   text-align: center;
   padding: 20px;
