--- a/main-styles.css
+++ b/main-styles.css
@@ -363,3 +363,47 @@ nav ul li{
   text-transform: uppercase;
   margin-top: 20px;
 }
+
+/* newsletter section  */
+.newsletter-section {
+  width: 100%;
+  height: 75px;
+  background: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.newsletter-section .newsletter-container {
+  display: flex;
+  justify-content: space-around;
+  gap: 50px;
+}
+
+.newsletter-section h1 {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 32px;
+  font-weight: 800;
+}
+
+.newsletter-section form {
+  display: flex;
+  align-items: center;
+}
+
+.newsletter-section form button {
+  margin: 0;
+  border: 0;
+  border-width: 0px;
+  padding: 10px 20px;
+  background: #fff;
+}
+
+.newsletter-section form input {
+  padding: 10px 100px 10px 20px;
+  background: #F2F2F2;
+  border: 0;
+  text-transform: uppercase;
+}
