--- a/main-styles.css
+++ b/main-styles.css
@@ -407,3 +407,95 @@ nav ul li{
   border: 0;
   text-transform: uppercase;
 }
+
+/* footer section  */
+footer {
+  padding: 50px;
+  background: #fff;
+  height: 300px;
+}
+
+.footer-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 50px;
+}
+
+.column-1 {
+  display: flex;
+  gap: 50px;
+  padding-right: 200px;
+}
+
+.column-2 {
+  flex: 1;
+  gap: 50px;
+
+}
+
+.column-1 ul,
+.column-2 ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.column-1 ul li,
+.column-2 ul li {
+  margin-bottom: 20px;
+
+}
+
+.column-1 ul li a,
+.column-2 ul li a {
+  text-decoration: none;
+  color: black;
+  font-size: 12px;
+}
+
+.column-1 h3,
+.column-2 h3 {
+  margin-top: 0;
+  padding-bottom: 10px;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.follow-us,
+.we-accept {
+  margin-bottom: 20px;
+}
+
+.social-images ul li,
+.payment-images ul li{
+  display: inline-block;
+}
+
+.social-images img {
+  margin-right: 10px;
+  margin-bottom: 10px;
+  width: 20px;
+}
+
+.payment-images img {
+  margin-right: 10px;
+  margin-bottom: 10px;
+  width: 40px;
+}
+
+.copyright {
+  text-align: center;
+  width: 100%;
+  background: #fff;
+}
+
+.copyright p {
+  margin: 0;
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+
+.copy-info {
+  display: flex;
+  justify-content: space-between;
+}
