--- a/main-styles.css
+++ b/main-styles.css
@@ -19,6 +19,9 @@ body {
   width: 100%;
   height: 70px;
   background: white;
+  position: fixed;
+  top: 0;
+  z-index: 1030;
 }
 
 .container nav {
@@ -61,6 +64,7 @@ nav ul li{
   width: 100%;
   height: 50px;
   background: #F2F2F2;
+  margin-top: 70px;
 }
 
 .benefits-list ul li {
